Refactor CORS configuration and security settings